terraform/test/1-vpc.tf
resource "aws_vpc" "digitalhippo_vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "digitalhippo-vpc"
  }
}
